--- a/new-ec2-creation.yaml
+++ b/new-ec2-creation.yaml
@@ -1,8 +1,23 @@
+Mappings:
+  RegionMap:
+    us-east-1:
+      AMI: ami-0d5eff06f840b45e9
+    us-west-1:
+      AMI: ami-655a0a20
+    eu-west-1:
+      AMI: ami-7fd4e10b
+    ap-southeast-1:
+      AMI: ami-72621c20
+    ap-northeast-1:
+      AMI: ami-8e08a38f
 Resources:
   WebAppInstance:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: ami-0d5eff06f840b45e9 # ImageID valid only in us-east-1 region
+      ImageId: !FindInMap 
+        - RegionMap
+        - !Ref 'AWS::Region'
+        - AMI # ImageID valid only in us-east-1 region
       InstanceType: t2.micro
       Tags:
         - Key: Name
